# muir

./: CMakeLists.txt  Makefile  README.md  build_support.sh  muir-config.h.in  muir-data.cpp  muir-data.h  readdata.cpp  test-read.sh
CMake.local/: FindFFTW.cmake  FindHDF5.cmake  FindOpenCL.cmake
gd-2.0.35/: CMakeLists.txt
src/: CMakeLists.txt  colorizer.frag  muir-cl.cpp  muir-compare.cpp  muir-constants.cpp  muir-constants.h  muir-data.cpp  muir-data.h  muir-decode.cpp  muir-gl-data.cpp  muir-gl-data.h  muir-gl-shader.cpp  muir-gl-shader.h  muir-gl.cpp  muir-global.cpp  muir-global.h  muir-hd5.cpp  muir-hd5.h  muir-plot.cpp  muir-plot.h  muir-process-cl.cpp  muir-process-cl.h  muir-process-cpu.cpp  muir-process-cpu.h  muir-process.cpp  muir-process.h  muir-rti.cpp  muir-timer.cpp  muir-timer.h  muir-types.h  muir-utility.cpp  muir-utility.h  muir-validate-lib.cpp  muir-validate-lib.h  muir-validate.cpp  readdata.cpp  stage1-phasecode.cl  stage2-fft.cl  stage3-findpeak.cl  stage3-power.cl  (+1 more)
